# uchat-server

./: .env  Cargo.toml  README.md
docs/: clientsocket.md  mysql.md
src/: api.rs  client.rs  clientsocket.rs  db.rs  handlers.rs  main.rs  models.rs  protocol.rs  sqlquery.rs  utils.rs
