[package]
name = "uchat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
bcrypt = "0.13"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
